charts/oci-service-broker/samples/network-policy/allow-all-pods-from-namespace.yaml
#
# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
#
# Allow access to OCI Service Broker from "any" pods running in the namespace that
# contains label "app=service-catalog".
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-catalog-from-any-nm
spec:
  podSelector:
    matchLabels:
      app: oci-service-broker
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            app: service-catalog 
        podSelector:
          matchLabels:
            app: catalog-catalog-controller-manager
